--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,3 +1,3 @@
-name=Unfiltered OAuth Server
-description=Say something about this template.
-unfiltered_version=0.5.3
+description = "A reference implementation of an Unfiltered OAuth 1 server"
+name = Unfiltered OAuth Server
+unfiltered_version = ls(unfiltered, unfiltered)
